<resources>
    <string name="app_name">Finance manager</string>
    <string name="title_activity_main2">Finance manager</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_profile">Profile</string>
    <string name="title_auth">auth</string>
    <string name="category_name">Category Name</string>
    <string name="sum">Sum</string>
    <string name="expense_name">Expense name</string>
    <string name="checks">Checks</string>
    <string name="expenses">Expenses</string>
    <string name="scan">scan</string>
    <string name="aims">Aims</string>
    <string name="title_aims">Aims</string>
    <string name="aim_name">Aim name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="maybe">maybe</string>
    <string name="allocate">allocate</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="allocation_percent">Allocation percent</string>
    <string name="error_fill">fill in all the fields</string>
    <string name="accumulated">Accumulated</string>
    <string name="accumulated_percent">Accumulated percent</string>
    <string name="spent">Spent</string>
    <string name="difference">Difference</string>
    <string name="is_sure">are you sure?</string>
</resources>